chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deployment
  namespace: argha-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat-container
          image: cryptic0053/node-chat:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
