chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: argha-dev
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
